Changed getFirst to get(0) due do get first only working on some of our pcs