@@ -69,7 +69,6 @@ public class NonAlcDrinkScreenManager {
      * Handles the click event on the "None of the above" button.
      * Resets the ingredient choice buttons and shows ingredients on them.
      *
-     * @param event The ActionEvent object representing the click event.
      */
     @FXML
     private void clickNoneOfTheAboveButton() {
@@ -96,7 +95,7 @@ public class NonAlcDrinkScreenManager {
      */
     private void showIngredients(Button button) {
         if (!(ingredientNames.isEmpty())) {
-            String temp = ingredientNames.getFirst();
+            String temp = ingredientNames.get(0);
             button.setText(temp);
             ingredientNames.remove(temp);
 
